--- a/app/views/layouts/remark.html.haml
+++ b/app/views/layouts/remark.html.haml
@@ -7,4 +7,4 @@
   %body
     %textarea#source~ yield
 = javascript_include_tag 'http://gnab.github.io/remark/downloads/remark-0.6.0.min.js'
-= javascript_tag 'remark.create()'
+= javascript_tag "remark.create({highlightStyle: 'railscasts', highlightLanguage: 'ruby'})"
