--- a/app/assets/stylesheets/remark.scss
+++ b/app/assets/stylesheets/remark.scss
@@ -1,6 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif);
 @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 
+body {
+  font-family: 'Arial';
+  font-size: 150%;
+}
+
 h1, h2, h3 {
   font-family: 'Yanone Kaffeesatz';
   font-weight: 400;
