--- a/app/assets/stylesheets/remark.scss
+++ b/app/assets/stylesheets/remark.scss
@@ -11,20 +11,41 @@ h1, h2, h3 {
   font-weight: 400;
   margin-bottom: 0;
 }
-h1 { font-size: 4em; }
-h2 { font-size: 2em; }
-h3 { font-size: 1.6em; }
+
+h1 {
+  font-size: 4em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.6em;
+}
+
 .footnote {
   position: absolute;
   bottom: 3em;
 }
-li p { line-height: 1.25em; }
-.red { color: #fa0000; }
-.large { font-size: 2em; }
+
+li p {
+  line-height: 1.25em;
+}
+
+.red {
+  color: #fa0000;
+}
+
+.large {
+  font-size: 2em;
+}
+
 a, a > code {
   color: rgb(249, 38, 114);
   text-decoration: none;
 }
+
 code {
   -moz-border-radius: 5px;
   -web-border-radius: 5px;
@@ -32,29 +53,36 @@ code {
   border-radius: 5px;
   font-size: 16px;
 }
+
 .pull-left {
   float: left;
   width: 47%;
 }
+
 .pull-right {
   float: right;
   width: 47%;
 }
+
 .pull-right ~ p {
   clear: both;
 }
+
 #slideshow .slide .content code {
   font-size: 0.8em;
 }
+
 #slideshow .slide .content pre code {
   font-size: 0.9em;
   padding: 15px;
 }
+
 .inverse {
   background: #272822;
   color: #777872;
   text-shadow: 0 0 20px #333;
 }
+
 .inverse h1, .inverse h2 {
   color: #f3f3f3;
   line-height: 0.8em;
@@ -65,15 +93,18 @@ code {
   bottom: 12px;
   left: 20px;
 }
+
 #slide-how .slides {
   font-size: 0.9em;
   position: absolute;
-  top:  151px;
+  top: 151px;
   right: 140px;
 }
+
 #slide-how .slides h3 {
   margin-top: 0.2em;
 }
+
 #slide-how .slides .first, #slide-how .slides .second {
   padding: 1px 20px;
   height: 90px;
@@ -82,6 +113,7 @@ code {
   -webkit-box-shadow: 0 0 10px #777;
   box-shadow: 0 0 10px #777;
 }
+
 #slide-how .slides .first {
   background: #fff;
   position: absolute;
@@ -89,6 +121,7 @@ code {
   left: 20%;
   z-index: 1;
 }
+
 #slide-how .slides .second {
   position: relative;
   background: #fff;
@@ -102,23 +135,24 @@ code {
   height: 92%;
   float: left;
 }
+
 .left-column h2:last-of-type, .left-column h3:last-child {
   color: #000;
 }
+
 .right-column {
   width: 75%;
   float: right;
   padding-top: 2em;
 }
 
-
 .small-image > img {
-  max-height: 450px;
+  max-height: 350px;
   max-width: 600px;
   margin: 0 auto;
   display: block;
 }
 
-.with-margin{
+.with-margin {
   margin-top: 50px;
 }
