--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,8 +1,8 @@
 .page-header
-  = link_to events_path, :class => 'btn btn-default' do
+  = link_to events_path, class: 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
-  = link_to edit_event_path(@event), :class => 'btn btn-primary' do
+  = link_to edit_event_path(@event), class: 'btn btn-primary' do
     %span.glyphicon.glyphicon-pencil
     Edit
   %h1 Show event
