--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,12 +1,5 @@
-= form_for @event, :html => { :class => "form-horizontal" } do |f|
-  -if @event.errors.any?
-    .alert.alert-danger.alert-dismissable
-      %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"} &times;
-      %h4= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
-
-      %ul
-        - @event.errors.full_messages.each do |msg|
-          %li= msg
+= form_for @event, html: { class: 'form-horizontal' } do |f|
+  = render 'shared/object_errors', object: @event
 
   .form-group
     = f.label :state, :class => 'col-sm-2 control-label'
