--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,8 +1,8 @@
 .page-header
-  = link_to events_path, :class => 'btn btn-default' do
+  = link_to events_path, class: 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
-  = link_to @event, :class => 'btn btn-primary' do
+  = link_to @event, class: 'btn btn-primary' do
     %span.glyphicon.glyphicon-info-sign
     Show
   %h1 Editing event
