--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,10 +1,6 @@
 .page-header
-  = link_to events_path, class: 'btn btn-default' do
-    %span.glyphicon.glyphicon-list-alt
-    Back
-  = link_to edit_event_path(@event), class: 'btn btn-primary' do
-    %span.glyphicon.glyphicon-pencil
-    Edit
+  = icon_link_to 'list-alt', 'Back', events_path, class: 'btn btn-default'
+  = icon_link_to :pencil, 'Edit', edit_event_path(@event), class: 'btn btn-primary'
   %h1 Show event
 
 %dl.dl-horizontal
