--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,40 +1,43 @@
 !!!
 %html
   %head
-    %meta{:charset => "utf-8"}
-    %title Starter Template for Bootstrap
-    %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", :name => "viewport"}
-    %meta{:content => "", :name => "description"}
-    %meta{:content => "", :name => "author"}
+    %meta{charset: 'utf-8'}
+    %title otoTeam
+    %meta{content: 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no', name: 'viewport'}
+    %meta{content: '', name: 'description'}
+    %meta{content: '', name: 'author'}
 
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
-      = javascript_include_tag "https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js", "https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"
+      = javascript_include_tag 'https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js'
+      = javascript_include_tag 'https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js'
 
-    = stylesheet_link_tag    "application", :media => "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
     .navbar.navbar-inverse.navbar-fixed-top
       .container
         .navbar-header
-          %button.navbar-toggle{:type => "button", :data => {:toggle => "collapse", :target => ".navbar-collapse"} }
+          %button.navbar-toggle{type: 'button', data: {toggle: 'collapse', target: '.navbar-collapse'} }
             %span.sr-only Toggle navigation
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          = link_to "Project name", "#", :class => "navbar-brand"
+          = link_to 'otoTeam', root_path, class: 'navbar-brand'
         .collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li.active
-              %a{:href => "#"} Home
+              = link_to 'Events', events_path
             %li
-              %a{:href => "#about"} About
+              = link_to 'Friends', '#'
             %li
-              %a{:href => "#contact"} Contact
+              = link_to 'Groups', '#'
+          %ul.nav.navbar-nav.navbar-right
+            %li
+              = link_to 'Profile', '#'
+            %li
+              = link_to 'Logout', '#'
     .container
-      - flash.each do |name, msg|
-        = content_tag :div, :class => "alert alert-#{name == :error ? "danger" : "success" } alert-dismissable" do
-          %button.close{:type => "button", :data => {:dismiss => "alert"}, :aria => {:hidden => "true"} } &times;
-          = msg
+      = render 'shared/flash_messages'
       = yield
