show less data in events list

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -8,18 +8,11 @@
       %tr
         %th State
         %th Name
-        %th Description
         %th Start at
+        %th Attendees
+        %th Limit
         %th Invite from
-        %th Invite to
-        %th Attendees min count
-        %th Attendees max count
-        %th Minutes for answer
-        %th Public attendees list
-        %th Creator
-        %th
-        %th
-        %th
+        %th Actions
 
     %tbody
       = render @events
