--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
             %li.active
               = link_to 'Events', events_path
             %li
-              = link_to 'Friends', '#'
+              = link_to 'Friends', friends_path
             %li
               = link_to 'Groups', '#'
           %ul.nav.navbar-nav.navbar-right
