--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
             %li
               = link_to 'Friends', friends_path
             %li
-              = link_to 'Groups', '#'
+              = link_to 'Groups', groups_path
           %ul.nav.navbar-nav.navbar-right
             %li
               = link_to 'Profile', '#'
