--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -14,9 +14,11 @@
         %th
 
     %tbody
+      = paginate @groups
       - @groups.each do |group|
         %tr
           %td= group.name
           %td= link_to 'Show', group
           %td= link_to 'Edit', edit_group_path(group)
           %td= link_to 'Destroy', group, :data => { confirm: 'Are you sure?' }, :method => :delete
+
