--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -24,12 +24,22 @@
 
     %tbody
 
-      / = search_form_for @search do |f|
-      /  =f.label :name_cont, 'Name contains'
-      /  =f.text_field :name_cont
-      /  =f.submit 'Search'
 
-      = paginate @events
+
+
+
+
+      = search_form_for @search do |f|
+        =f.label :name_cont, 'Name contains'
+        =f.text_field :name_cont
+        %tr
+        =f.label :description_cont, 'Description constains'
+        =f.text_field :description_cont
+        =f.label :start_time_cont, 'Start time'
+        =f.text_field :start_time_cont
+        =f.submit 'Search'
+
+        = paginate @events
       - @events.each do |event|
         %tr
           %td= event.name
