added kaminari and pagination for events, friends, groups

--- a/app/views/friends/index.html.haml
+++ b/app/views/friends/index.html.haml
@@ -14,3 +14,7 @@
         %th Actions
     %tbody
       = render @friends
+
+.text-center
+  .text-muted= page_entries_info @friends
+  = paginate @friends
