--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,9 +32,28 @@
               %a{:href => "#about"} About
             %li
               %a{:href => "#contact"} Contact
+
+
+        = class="navbar-text pull-right"
+        =if user_signed_in?
+          ="Logged in as = current_user.email."
+          = link_to('Edit profile', @edit_user_registration_path)
+          = link_to("Logout",@destroy_user_session_path, method: :delete)
+        else
+          = link_to("Sign up", @new_user_registration_path)
+          = link_to("Login", @new_user_session_path)
+        end
     .container
       - flash.each do |name, msg|
         = content_tag :div, :class => "alert alert-#{name == :error ? "danger" : "success" } alert-dismissable" do
           %button.close{:type => "button", :data => {:dismiss => "alert"}, :aria => {:hidden => "true"} } &times;
           = msg
+
+        = if notice
+          = class="alert alert-notice" ==notice
+
+        = if alert
+          = class="alert alert-error" == alert
+
+
       = yield
