dodano rejestracje i logowanie oraz autoryzacje

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,26 +34,26 @@
               %a{:href => "#contact"} Contact
 
 
-        = class="navbar-text pull-right"
-        =if user_signed_in?
-          ="Logged in as = current_user.email."
-          = link_to('Edit profile', @edit_user_registration_path)
-          = link_to("Logout",@destroy_user_session_path, method: :delete)
-        else
-          = link_to("Sign up", @new_user_registration_path)
-          = link_to("Login", @new_user_session_path)
-        end
+            %p.navbar-text.pull-right
+              - if user_signed_in?
+                Logged in as
+                = succeed "." do
+                  %strong= current_user.email
+                = link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link'
+                = link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'
+              - else
+                = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
+                = link_to "Login", new_user_session_path, :class => 'navbar-link'
+
     .container
       - flash.each do |name, msg|
         = content_tag :div, :class => "alert alert-#{name == :error ? "danger" : "success" } alert-dismissable" do
           %button.close{:type => "button", :data => {:dismiss => "alert"}, :aria => {:hidden => "true"} } &times;
           = msg
 
-        = if notice
-          = class="alert alert-notice" ==notice
-
-        = if alert
-          = class="alert alert-error" == alert
-
+        - if notice
+          %p.alert.alert-notice= notice
+        - if alert
+          %p.alert.alert-error= alert
 
       = yield
