--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,15 +23,17 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          = link_to "Project name", "#", :class => "navbar-brand"
+          = link_to "Zapraszarka", "#", :class => "navbar-brand"
         .collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li.active
-              %a{:href => "#"} Home
+              %a{:href => "events"} Events
             %li
-              %a{:href => "#about"} About
+              %a{:href => "groups"} Groups
             %li
-              %a{:href => "#contact"} Contact
+              %a{:href => "friends"} Friends
+            %li
+              %a{:href => "posts"} Posts
 
 
           %p.navbar-text.pull-right
