--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,6 +3,9 @@
 
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, class: 'form-horizontal' }) do |f|
   = f.error_notification
+  = f.simple_fields_for :own_profile do |profile_form|
+    = profile_form.input :fullname
+    = profile_form.input :phone
   = f.input :email, :required => true, :autofocus => true
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %p
