--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,11 +1,11 @@
 .page-header
-  %h1 Resend confirmation instructions
+  %h1= t('devise.confirmations.title')
 
-= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post, class: 'form-horizontal' }) do |f|
+= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f|
   = f.error_notification
   = f.full_error :confirmation_token
-  = f.input :email, :required => true, :autofocus => true
+  = f.input :email, required: true, autofocus: true
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.button :submit, "Resend confirmation instructions", class: 'btn-primary'
+      = f.button :submit, t('devise.confirmations.submit_button'), class: 'btn-primary'
 = render "devise/shared/links"
