--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,13 +1,13 @@
 .page-header
-  %h1 Change your password
+  %h1= t('devise.passwords.new_title')
 
-= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put, class: 'form-horizontal' }) do |f|
+= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f|
   = f.error_notification
-  = f.input :reset_password_token, :as => :hidden
+  = f.input :reset_password_token, as: :hidden
   = f.full_error :reset_password_token
-  = f.input :password, :label => "New password", :required => true, :autofocus => true
-  = f.input :password_confirmation, :label => "Confirm your new password", :required => true
+  = f.input :password, label: t('devise.passwords.new_password'), required: true, autofocus: true
+  = f.input :password_confirmation, label: t('devise.passwords.confirm_your_new_password'), required: true
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.button :submit, "Change my password", class: 'btn-primary'
+      = f.button :submit, t('devise.passwords.change_my_password'), class: 'btn-primary'
 = render "devise/shared/links"
