--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,10 @@
 .page-header
-  %h1 Forgot your password?
+  %h1= t('devise.passwords.new_title')
 
-= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, class: 'form-horizontal' }) do |f|
+= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f|
   = f.error_notification
-  = f.input :email, :required => true, :autofocus => true
+  = f.input :email, required: true, autofocus: true
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.button :submit, "Send me reset password instructions", class: 'btn-primary'
+      = f.button :submit, t('devise.passwords.send_instructions_button'), class: 'btn-primary'
 = render "devise/shared/links"
