--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,12 @@
 .page-header
-  %h1 Sign up
+  %h1= t('devise.registrations.new_title')
 
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal' }) do |f|
+= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f|
   = f.error_notification
-  = f.input :email, :required => true, :autofocus => true
-  = f.input :password, :required => true
-  = f.input :password_confirmation, :required => true
+  = f.input :email, required: true, autofocus: true
+  = f.input :password, required: true
+  = f.input :password_confirmation, required: true
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.button :submit, "Sign up", class: 'btn-primary'
+      = f.button :submit, t('devise.registrations.sign_up_button'), class: 'btn-primary'
 = render "devise/shared/links"
