--- a/app/views/devise/unlocks/new.html.haml
+++ b/app/views/devise/unlocks/new.html.haml
@@ -1,11 +1,11 @@
 .page-header
-  %h2 Resend unlock instructions
+  %h2= t('devise.unlocks.title')
 
-= simple_form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post, class: 'form-horizontal' }) do |f|
+= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f|
   = f.error_notification
   = f.full_error :unlock_token
-  = f.input :email, :required => true, :autofocus => true
+  = f.input :email, required: true, autofocus: true
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.button :submit, "Resend unlock instructions", class: 'btn-primary'
+      = f.button :submit, t('devise.unlocks.submit_button'), class: 'btn-primary'
 = render "devise/shared/links"
