--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,28 +1,16 @@
 .page-header
-  = icon_link_to 'list-alt', 'Back', events_path, class: 'btn btn-default'
-  = icon_link_to :pencil, 'Edit', edit_event_path(@event), class: 'btn btn-primary'
-  %h1 Show event
+  = icon_link_to 'list-alt', t('back'), events_path, class: 'btn btn-default'
+  = icon_link_to :pencil, t('edit'), edit_event_path(@event), class: 'btn btn-primary'
+  %h1= t('.title')
 
 %dl.dl-horizontal
-  %dt State:
-  %dd= @event.state
-  %dt Name:
-  %dd= @event.name
-  %dt Description:
-  %dd= @event.description
-  %dt Start at:
-  %dd= @event.start_at
-  %dt Invite from:
-  %dd= @event.invite_from
-  %dt Invite to:
-  %dd= @event.invite_to
-  %dt Attendees min count:
-  %dd= @event.attendees_min_count
-  %dt Attendees max count:
-  %dd= @event.attendees_max_count
-  %dt Minutes for answer:
-  %dd= @event.minutes_for_answer
-  %dt Public attendees list:
-  %dd= @event.public_attendees_list
-  %dt Creator:
-  %dd= @event.creator_id
+  = attribute_entry(@event, :state)
+  = attribute_entry(@event, :name)
+  = attribute_entry(@event, :description)
+  = attribute_entry(@event, :start_at)
+  = attribute_entry(@event, :invite_from)
+  = attribute_entry(@event, :invite_to)
+  = attribute_entry(@event, :attendees_min_count)
+  = attribute_entry(@event, :attendees_max_count)
+  = attribute_entry(@event, :minutes_for_answer)
+  = attribute_entry(@event, :public_attendees_list)
