--- a/app/views/friends/show.html.haml
+++ b/app/views/friends/show.html.haml
@@ -1,12 +1,9 @@
 .page-header
-  = icon_link_to 'list-alt', 'Back', friends_path, class: 'btn btn-default'
-  = icon_link_to :pencil, 'Edit', edit_friend_path(@friend), class: 'btn btn-primary'
-  %h1 Show friend
+  = icon_link_to 'list-alt', t('back'), friends_path, class: 'btn btn-default'
+  = icon_link_to :pencil, t('edit'), edit_friend_path(@friend), class: 'btn btn-primary'
+  %h1= t('.title')
 
 %dl.dl-horizontal
-  %dt Fullname:
-  %dd= @friend.fullname
-  %dt Email:
-  %dd= @friend.email
-  %dt Phone:
-  %dd= @friend.phone
+  = attribute_entry(@friend, :fullname)
+  = attribute_entry(@friend, :email)
+  = attribute_entry(@friend, :phone)
