--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,6 +1,6 @@
 .page-header
-  = icon_link_to 'list-alt', 'Back', groups_path, class: 'btn btn-default'
-  = icon_link_to 'info-sign', 'Show', @group, class: 'btn btn-primary'
-  %h1 Editing group
+  = icon_link_to 'list-alt', t('back'), groups_path, class: 'btn btn-default'
+  = icon_link_to 'info-sign', t('show'), @group, class: 'btn btn-primary'
+  %h1= t('.title')
 
 = render 'form'
