--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,9 +1,9 @@
 .page-header
-  = icon_link_to :plus, 'New Group', new_group_path, class: 'btn btn-primary'
-  %h1 Listing groups
+  = icon_link_to :plus, t('.new_group'), new_group_path, class: 'btn btn-primary'
+  %h1= t('.title')
 
 = search_form_for @q, wrapper: :search_form do |f|
-  = f.input :name_cont, as: :string, placeholder: 'Name contains', wrapper_html: { class: 'col-sm-3' }
+  = f.input :name_cont, as: :string, placeholder: t('.search_form.name_contains'), wrapper_html: { class: 'col-sm-3' }
   .form-group
     = f.button :submit
 
@@ -11,9 +11,8 @@
   %table.table.table-striped.table-bordered.table-hover
     %thead
       %tr
-        %th Name
-        %th Friends count
-        %th Actions
+        - %w(name friends_count actions).each do |column|
+          = Group.human_attribute_name(column)
     %tbody
       = render @groups
 
