--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  = icon_link_to 'list-alt', 'Back', groups_path, class: 'btn btn-default'
-  %h1 New group
+  = icon_link_to 'list-alt', t('back'), groups_path, class: 'btn btn-default'
+  %h1= t('.title')
 
 = render 'form'
