--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -16,7 +16,6 @@
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.button :submit, t('update'), class: 'btn-primary'
-%h3 Cancel my account
 %p
-  Unhappy? #{link_to t('devise.registrations.cancel_account'), registration_path(resource_name), data: { confirm: t('confirmation') }, method: :delete}
+  = link_to t('devise.registrations.cancel_account'), registration_path(resource_name), data: { confirm: t('confirmation') }, method: :delete
 = link_to t('back'), :back
