Use decent exposure for events controller

--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,6 +1,6 @@
 .page-header
   = icon_link_to 'list-alt', t('back'), events_path, class: 'btn btn-default'
-  = icon_link_to 'info-sign', t('show'), @event, class: 'btn btn-primary'
+  = icon_link_to 'info-sign', t('show'), event, class: 'btn btn-primary'
   %h1= t('.title')
 
 = render 'form'
