--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,5 +1,5 @@
-= simple_form_for @event, html: { class: 'form-horizontal' } do |f|
-  = render 'shared/object_errors', object: @event
+= simple_form_for event, html: { class: 'form-horizontal' } do |f|
+  = render 'shared/object_errors', object: event
 
   = f.input :name
   = f.input :description
