--- a/app/views/friends/edit.html.haml
+++ b/app/views/friends/edit.html.haml
@@ -1,6 +1,6 @@
 .page-header
   = icon_link_to 'list-alt', t('back'), friends_path, class: 'btn btn-default'
-  = icon_link_to 'info-sign', t('show'), @friend, class: 'btn btn-primary'
+  = icon_link_to 'info-sign', t('show'), friend, class: 'btn btn-primary'
   %h1= t('.title')
 
 = render 'form'
