--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,5 +1,5 @@
-= simple_form_for @group, html: { class: 'form-horizontal' } do |f|
-  = render 'shared/object_errors', object: @group
+= simple_form_for group, html: { class: 'form-horizontal' } do |f|
+  = render 'shared/object_errors', object: group
 
   = f.input :name
   .form-group
