--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,7 +1,7 @@
 .page-header
   = icon_link_to 'list-alt', t('back'), groups_path, class: 'btn btn-default'
-  = icon_link_to :pencil, t('edit'), edit_group_path(@group), class: 'btn btn-primary'
+  = icon_link_to :pencil, t('edit'), edit_group_path(group), class: 'btn btn-primary'
   %h1= t('.title')
 
 %dl.dl-horizontal
-  = attribute_entry(@group, :name)
+  = attribute_entry(group, :name)
