adding attendances to event

--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -2,7 +2,7 @@
   %td= event.state
   %td= event.name
   %td= event.start_at
-  %td= event.attendees_count
+  %td= event.attendances_count
   %td= event.limit_label
   %td= event.invite_from
   %td
