--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -6,6 +6,6 @@
   %td= event.limit_label
   %td= event.invite_from
   %td
-    = link_to t('show'), event
-    = link_to t('edit'), edit_event_path(event)
-    = link_to t('destroy'), event, data: { confirm: t('confirmation') }, method: :delete
+    = event.show_link
+    = event.edit_link
+    = event.destroy_link
