--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -15,3 +15,6 @@
   = attribute_entry(event, :attendees_max_count)
   = attribute_entry(event, :minutes_for_answer)
   = attribute_entry(event, :public_attendees_list)
+
+%h2 Invited friends
+%p= decorated_event.invited_friends_list
