--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -2,6 +2,6 @@
   %td= group.name
   %td= group.friends_count
   %td
-    = link_to t('show'), group
-    = link_to t('edit'), edit_group_path(group)
-    = link_to t('destroy'), group, data: { confirm: t('confirmation') }, method: :delete
+    = group.show_link
+    = group.edit_link
+    = group.destroy_link
