--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td= event.state
-  %td= event.name
+  %td= event.searched_name
   %td= event.start_at
   %td= event.attendances_count
   %td= event.limit_label
